working on displaying userGrade as menu item

--- a/AnimeOp&EdQuiz2/res/values/strings.xml
+++ b/AnimeOp&EdQuiz2/res/values/strings.xml
@@ -15,6 +15,8 @@
      <string name="musicPlay">Play</string>
      <string name="settingsActivity">Settings</string>
           <string name="reset_btn">Reset Quiz!</string>
+                    <string name="userGradetext">S</string>
+          
      
      
      
